Update execution counts and dependencies

--- a/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l2-guidelines.ipynb
+++ b/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l2-guidelines.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "6c382975",
    "metadata": {
     "height": 132,
@@ -31,21 +31,6 @@
    "outputs": [],
    "source": [
     "import openai\n",
-    "import os\n",
-    "\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
-    "_ = load_dotenv(find_dotenv())\n",
-    "\n",
-    "openai.api_key  = os.getenv('OPENAI_API_KEY')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64fd632a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "\n",
     "from dotenv import load_dotenv, find_dotenv\n",
@@ -68,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a7dff174",
    "metadata": {
     "height": 149,
@@ -126,13 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "87121316",
    "metadata": {
     "height": 336,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is important to provide clear and specific instructions to a model in order to guide it towards the desired output and reduce the chances of receiving irrelevant or incorrect responses, with longer prompts often providing more clarity and context for the model.\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
     "You should express what you want a model to do by \\ \n",
@@ -166,13 +159,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6b50bbbd",
    "metadata": {
     "height": 149,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    {\n",
+      "        \"book_id\": 1,\n",
+      "        \"title\": \"The Midnight Garden\",\n",
+      "        \"author\": \"Elena Rivers\",\n",
+      "        \"genre\": \"Fantasy\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"book_id\": 2,\n",
+      "        \"title\": \"Echoes of the Past\",\n",
+      "        \"author\": \"Nathan Black\",\n",
+      "        \"genre\": \"Mystery\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"book_id\": 3,\n",
+      "        \"title\": \"Whispers in the Wind\",\n",
+      "        \"author\": \"Samantha Reed\",\n",
+      "        \"genre\": \"Romance\"\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Generate a list of three made-up book titles along \\ \n",
@@ -631,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
