Update book titles and authors in l2-guidelines.ipynb

--- a/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l2-guidelines.ipynb
+++ b/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l2-guidelines.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "6b50bbbd",
    "metadata": {
     "height": 149,
@@ -179,15 +179,15 @@
       "    },\n",
       "    {\n",
       "        \"book_id\": 2,\n",
-      "        \"title\": \"Echoes of the Past\",\n",
-      "        \"author\": \"Nathan Black\",\n",
+      "        \"title\": \"Whispers in the Wind\",\n",
+      "        \"author\": \"Lucas Blackwood\",\n",
       "        \"genre\": \"Mystery\"\n",
       "    },\n",
       "    {\n",
       "        \"book_id\": 3,\n",
-      "        \"title\": \"Whispers in the Wind\",\n",
-      "        \"author\": \"Samantha Reed\",\n",
-      "        \"genre\": \"Romance\"\n",
+      "        \"title\": \"Echoes of the Past\",\n",
+      "        \"author\": \"Isabel Greene\",\n",
+      "        \"genre\": \"Historical Fiction\"\n",
       "    }\n",
       "]\n"
      ]
@@ -214,13 +214,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f0ae612e",
    "metadata": {
     "height": 506,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for Text 1:\n",
+      "Step 1 - Get some water boiling.\n",
+      "Step 2 - Grab a cup and put a tea bag in it.\n",
+      "Step 3 - Pour the hot water over the tea bag.\n",
+      "Step 4 - Let the tea steep for a few minutes.\n",
+      "Step 5 - Remove the tea bag.\n",
+      "Step 6 - Add sugar or milk to taste.\n",
+      "Step 7 - Enjoy your delicious cup of tea.\n"
+     ]
+    }
+   ],
    "source": [
     "text_1 = f\"\"\"\n",
     "Making a cup of tea is easy! First, you need to get some \\ \n",
@@ -255,13 +270,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "76b6cc59",
    "metadata": {
     "height": 506,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for Text 2:\n",
+      "No steps provided.\n"
+     ]
+    }
+   ],
    "source": [
     "text_2 = f\"\"\"\n",
     "The sun is shining brightly today, and the birds are \\\n",
@@ -304,13 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "82ce1540",
    "metadata": {
     "height": 251,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<grandparent>: The tallest trees withstand the strongest winds; the brightest stars shine through the darkest nights; the strongest hearts endure the toughest trials.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to answer in a consistent style.\n",
@@ -340,13 +372,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "5e7d6860",
    "metadata": {
     "height": 506,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for prompt 1:\n",
+      "1 - Jack and Jill go on a quest to fetch water from a hilltop well, but encounter misfortune along the way.\n",
+      "\n",
+      "2 - Jack et Jill partent en quête d'eau d'un puits au sommet d'une colline, mais rencontrent des malheurs en chemin.\n",
+      "\n",
+      "3 - Jack, Jill\n",
+      "\n",
+      "4 - \n",
+      "{\n",
+      "  \"french_summary\": \"Jack et Jill partent en quête d'eau d'un puits au sommet d'une colline, mais rencontrent des malheurs en chemin.\",\n",
+      "  \"num_names\": 2\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
     "In a charming village, siblings Jack and Jill set out on \\ \n",
@@ -389,13 +440,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "3e4222cc",
    "metadata": {
     "height": 370,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Completion for prompt 2:\n",
+      "Summary: Jack and Jill, siblings, go on a quest to fetch water from a hilltop well, but encounter misfortune along the way.\n",
+      "\n",
+      "Translation: Jack et Jill, frère et sœur, partent en quête d'eau d'un puits au sommet d'une colline, mais rencontrent des malheurs en chemin.\n",
+      "\n",
+      "Names: Jack, Jill\n",
+      "\n",
+      "Output JSON: \n",
+      "{\n",
+      "  \"french_summary\": \"Jack et Jill, frère et sœur, partent en quête d'eau d'un puits au sommet d'une colline, mais rencontrent des malheurs en chemin.\",\n",
+      "  \"num_names\": 2\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "prompt_2 = f\"\"\"\n",
     "Your task is to perform the following actions: \n",
