Update book titles and authors in l2-guidelines.ipynb

--- a/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l2-guidelines.ipynb
+++ b/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l2-guidelines.ipynb
@@ -501,13 +501,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ff5cc985",
    "metadata": {
     "height": 421,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student's solution is correct. The total cost for the first year of operations as a function of the number of square feet is indeed 450x + 100,000.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Determine if the student's solution is correct or not.\n",
@@ -546,13 +554,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "703f7003",
    "metadata": {
     "height": 999,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total cost for the first year of operations is calculated as follows:\n",
+      "1. Land cost: $100/sq ft * x sq ft = $100x\n",
+      "2. Solar panel cost: $250/sq ft * x sq ft = $250x\n",
+      "3. Maintenance cost: $100,000 + $10/sq ft * x sq ft = $100,000 + $10x\n",
+      "Total cost: $100x + $250x + $100,000 + $10x = $360x + $100,000\n",
+      "\n",
+      "Is the student's solution the same as actual solution just calculated:\n",
+      "```\n",
+      "No\n",
+      "```\n",
+      "Student grade:\n",
+      "```\n",
+      "Incorrect\n",
+      "```\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to determine if the student's solution \\\n",
@@ -625,13 +654,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "81c80919",
    "metadata": {
     "height": 98,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The AeroGlide UltraSlim Smart Toothbrush by Boie is a high-tech toothbrush designed to provide a superior cleaning experience. It features a sleek and slim design that makes it easy to maneuver in your mouth, reaching all areas for a thorough clean.\n",
+      "\n",
+      "The toothbrush is equipped with smart technology that tracks your brushing habits and provides real-time feedback to help you improve your oral hygiene routine. It also has a built-in timer to ensure you brush for the recommended two minutes.\n",
+      "\n",
+      "The bristles of the AeroGlide UltraSlim Smart Toothbrush are made from a durable and hygienic material called Boie's patented BPA-free thermoplastic elastomer. This material is gentle on your gums and teeth while still effectively removing plaque and debris.\n",
+      "\n",
+      "Overall, the AeroGlide UltraSlim Smart Toothbrush by Boie is a cutting-edge toothbrush that combines advanced technology with a sleek design to help you achieve a healthier smile.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Tell me about AeroGlide UltraSlim Smart Toothbrush by Boie\n",
