--- a/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l3-iterative-prompt-development.ipynb
+++ b/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l3-iterative-prompt-development.ipynb
@@ -277,13 +277,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e9455d58",
    "metadata": {
     "height": 401,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introducing our versatile and stylish office chair, part of a mid-century inspired furniture collection. Choose from a variety of shell colors and base finishes to suit your space. Constructed with a durable aluminum base and high-density foam seat for comfort. Perfect for home or business use. \n",
+      "\n",
+      "Product IDs: SWC-100, SWC-110\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to help a marketing team create a \n",
@@ -320,13 +330,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0384f1e4",
    "metadata": {
     "height": 554,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<div>\n",
+      "  <p>This mid-century inspired office chair is a perfect addition to any home or business setting. With a variety of shell colors and base finishes to choose from, you can customize this chair to fit your style. The chair is available with plastic back and front upholstery or full upholstery in a range of fabric and leather options. The 5-wheel plastic coated aluminum base provides stability, while the pneumatic chair adjust allows for easy raise and lower action. Made with high-quality materials, including cast aluminum with modified nylon coating for the shell and HD36 foam for the seat, this chair is both durable and comfortable. Whether you prefer armless or armrests, soft or hard-floor casters, this chair has options to suit your needs. Bring a touch of Italian craftsmanship into your space with this stylish and functional office chair.</p>\n",
+      "  \n",
+      "  <p>Product IDs: SWC-100, SWC-110</p>\n",
+      "  \n",
+      "  <h2>Product Dimensions</h2>\n",
+      "  <table>\n",
+      "    <tr>\n",
+      "      <td>WIDTH</td>\n",
+      "      <td>20.87\"</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <td>DEPTH</td>\n",
+      "      <td>20.08\"</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <td>HEIGHT</td>\n",
+      "      <td>31.50\"</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <td>SEAT HEIGHT</td>\n",
+      "      <td>17.32\"</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <td>SEAT DEPTH</td>\n",
+      "      <td>16.14\"</td>\n",
+      "    </tr>\n",
+      "  </table>\n",
+      "</div>\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to help a marketing team create a \n",
@@ -371,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "73ff0052",
    "metadata": {
     "height": 44,
@@ -384,13 +430,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "3465ffce",
    "metadata": {
     "height": 29,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "  <p>This mid-century inspired office chair is a perfect addition to any home or business setting. With a variety of shell colors and base finishes to choose from, you can customize this chair to fit your style. The chair is available with plastic back and front upholstery or full upholstery in a range of fabric and leather options. The 5-wheel plastic coated aluminum base provides stability, while the pneumatic chair adjust allows for easy raise and lower action. Made with high-quality materials, including cast aluminum with modified nylon coating for the shell and HD36 foam for the seat, this chair is both durable and comfortable. Whether you prefer armless or armrests, soft or hard-floor casters, this chair has options to suit your needs. Bring a touch of Italian craftsmanship into your space with this stylish and functional office chair.</p>\n",
+       "  \n",
+       "  <p>Product IDs: SWC-100, SWC-110</p>\n",
+       "  \n",
+       "  <h2>Product Dimensions</h2>\n",
+       "  <table>\n",
+       "    <tr>\n",
+       "      <td>WIDTH</td>\n",
+       "      <td>20.87\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>DEPTH</td>\n",
+       "      <td>20.08\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>HEIGHT</td>\n",
+       "      <td>31.50\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SEAT HEIGHT</td>\n",
+       "      <td>17.32\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SEAT DEPTH</td>\n",
+       "      <td>16.14\"</td>\n",
+       "    </tr>\n",
+       "  </table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(HTML(response))"
    ]
@@ -405,13 +492,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "dbe1f850",
    "metadata": {
     "height": 29
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('<div>\\n'\n",
+      " '  <p>This mid-century inspired office chair is a perfect addition to any '\n",
+      " 'home or business setting. With a variety of shell colors and base finishes '\n",
+      " 'to choose from, you can customize this chair to fit your style. The chair is '\n",
+      " 'available with plastic back and front upholstery or full upholstery in a '\n",
+      " 'range of fabric and leather options. The 5-wheel plastic coated aluminum '\n",
+      " 'base provides stability, while the pneumatic chair adjust allows for easy '\n",
+      " 'raise and lower action. Made with high-quality materials, including cast '\n",
+      " 'aluminum with modified nylon coating for the shell and HD36 foam for the '\n",
+      " 'seat, this chair is both durable and comfortable. Whether you prefer armless '\n",
+      " 'or armrests, soft or hard-floor casters, this chair has options to suit your '\n",
+      " 'needs. Bring a touch of Italian craftsmanship into your space with this '\n",
+      " 'stylish and functional office chair.</p>\\n'\n",
+      " '  \\n'\n",
+      " '  <p>Product IDs: SWC-100, SWC-110</p>\\n'\n",
+      " '  \\n'\n",
+      " '  <h2>Product Dimensions</h2>\\n'\n",
+      " '  <table>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <td>WIDTH</td>\\n'\n",
+      " '      <td>20.87\"</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <td>DEPTH</td>\\n'\n",
+      " '      <td>20.08\"</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <td>HEIGHT</td>\\n'\n",
+      " '      <td>31.50\"</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <td>SEAT HEIGHT</td>\\n'\n",
+      " '      <td>17.32\"</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <td>SEAT DEPTH</td>\\n'\n",
+      " '      <td>16.14\"</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '  </table>\\n'\n",
+      " '</div>')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "pprint(response)"
+   ]
   }
  ],
  "metadata": {
