Update result for jn

--- a/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l6-transforming.ipynb
+++ b/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l6-transforming.ipynb
@@ -290,12 +290,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "2deac328",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear Sir/Madam,\n",
+      "\n",
+      "I am writing to bring to your attention the specifications of a standing lamp that I believe may be of interest to you. \n",
+      "\n",
+      "Sincerely,\n",
+      "Joe\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Translate the following from slang to a business letter: \n",
@@ -318,12 +331,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5a37f0a0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html>\n",
+      "<head>\n",
+      "  <title>Restaurant Employees</title>\n",
+      "</head>\n",
+      "<body>\n",
+      "  <table>\n",
+      "    <tr>\n",
+      "      <th>Name</th>\n",
+      "      <th>Email</th>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <td>Shyam</td>\n",
+      "      <td>shyamjaiswal@gmail.com</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <td>Bob</td>\n",
+      "      <td>bob32@gmail.com</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <td>Jai</td>\n",
+      "      <td>jai87@gmail.com</td>\n",
+      "    </tr>\n",
+      "  </table>\n",
+      "</body>\n",
+      "</html>\n"
+     ]
+    }
+   ],
    "source": [
     "data_json = { \"resturant employees\" :[ \n",
     "    {\"name\":\"Shyam\", \"email\":\"shyamjaiswal@gmail.com\"},\n",
@@ -341,12 +386,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "481a46b7",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html>\n",
+       "<head>\n",
+       "  <title>Restaurant Employees</title>\n",
+       "</head>\n",
+       "<body>\n",
+       "  <table>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <th>Email</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Shyam</td>\n",
+       "      <td>shyamjaiswal@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Bob</td>\n",
+       "      <td>bob32@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Jai</td>\n",
+       "      <td>jai87@gmail.com</td>\n",
+       "    </tr>\n",
+       "  </table>\n",
+       "</body>\n",
+       "</html>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import display, Markdown, Latex, HTML, JSON\n",
     "display(HTML(response))"
@@ -368,12 +450,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "52d77283",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The girl with the black and white puppies has a ball.\n",
+      "No errors found\n",
+      "No errors found.\n",
+      "Their goes my freedom. There going to bring they’re suitcases.\n",
+      "\n",
+      "No errors found.\n",
+      "\n",
+      "Rewritten:\n",
+      "Their goes my freedom. There going to bring their suitcases.\n",
+      "You're going to need your notebook.\n",
+      "No errors found.\n",
+      "No errors found\n"
+     ]
+    }
+   ],
    "source": [
     "text = [ \n",
     "  \"The girl with the black and white puppies have a ball.\",  # The girl has a ball.\n",
@@ -396,12 +497,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "7543fe7d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got this for my daughter for her birthday because she keeps taking mine from my room. Yes, adults also like pandas too. She takes it everywhere with her, and it's super soft and cute. One of the ears is a bit lower than the other, and I don't think that was designed to be asymmetrical. It's a bit small for what I paid for it though. I think there might be other options that are bigger for the same price. It arrived a day earlier than expected, so I got to play with it myself before I gave it to my daughter.\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
     "Got this for my daughter for her birthday cuz she keeps taking \\\n",
@@ -420,12 +529,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "11ac80a0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Got this for my daughter for her birthday <span style='color:red;font-weight:700;text-decoration:line-through;'>cuz </span><span style='color:green;font-weight:700;'>because </span>she keeps taking mine from my <span style='color:red;font-weight:700;text-decoration:line-through;'>room.  </span><span style='color:green;font-weight:700;'>room. </span>Yes, adults also like pandas <span style='color:red;font-weight:700;text-decoration:line-through;'>too.  </span><span style='color:green;font-weight:700;'>too. </span>She takes it everywhere with her, and it's super soft and <span style='color:red;font-weight:700;text-decoration:line-through;'>cute.  </span><span style='color:green;font-weight:700;'>cute. </span>One of the ears is a bit lower than the other, and I don't think that was designed to be asymmetrical. It's a bit small for what I paid for it though. I think there might be other options that are bigger for the same <span style='color:red;font-weight:700;text-decoration:line-through;'>price.  </span><span style='color:green;font-weight:700;'>price. </span>It arrived a day earlier than expected, so I got to play with it myself before I gave it to my daughter."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from redlines import Redlines\n",
     "\n",
@@ -435,12 +557,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "2b4e73fd",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "I purchased this adorable panda plush as a birthday gift for my daughter, as she kept borrowing mine from my room. It's not just for kids - even adults can appreciate the charm of pandas. The plush is incredibly soft and cute, becoming my daughter's constant companion wherever she goes. However, I did notice a slight asymmetry in the ears, which I believe was not intentional in the design. Additionally, considering the price, I found the size to be a bit smaller than expected. I suspect there are larger options available for the same cost. Despite this, I was pleasantly surprised when the plush arrived a day earlier than anticipated, allowing me to enjoy its cuddly goodness before passing it on to my daughter. For those seeking a lovable and huggable companion, this panda plush is a delightful choice that brings joy to both children and adults alike."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "proofread and correct this review. Make it more compelling. \n",
