--- a/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l5-inferring.ipynb
+++ b/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l5-inferring.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "39689e67",
    "metadata": {
     "tags": []
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e82f5577",
    "metadata": {
     "tags": []
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b0f3b49b",
    "metadata": {
     "tags": []
@@ -96,12 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e3157601",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentiment of the review is positive. The reviewer is satisfied with the lamp, the customer service, and the company in general.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "What is the sentiment of the following product review, \n",
@@ -115,12 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "acf9ca16",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "What is the sentiment of the following product review, \n",
@@ -145,12 +161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8aa7934b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "happy, satisfied, grateful, impressed, pleased\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Identify a list of emotions that the writer of the \\\n",
@@ -174,12 +198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dba1a538",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Is the writer of the following review expressing anger?\\\n",
@@ -202,12 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a13bea1b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"Item\": \"lamp\",\n",
+      "  \"Brand\": \"Lumina\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Identify the following items from the review text: \n",
@@ -237,12 +280,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e7dda9e5",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"Sentiment\": \"positive\",\n",
+      "    \"Anger\": false,\n",
+      "    \"Item\": \"lamp\",\n",
+      "    \"Brand\": \"Lumina\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Identify the following items from the review text: \n",
@@ -275,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8a74cc3e",
    "metadata": {
     "tags": []
@@ -321,12 +377,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5c267cbe",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Survey\n",
+      "2. Job satisfaction\n",
+      "3. NASA\n",
+      "4. Social Security Administration\n",
+      "5. Government pledge\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Determine five topics that are being discussed in the \\\n",
@@ -344,19 +412,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f92f90fe",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1. Survey\\n2. Job satisfaction\\n3. NASA\\n4. Social Security Administration\\n5. Government pledge']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response.split(sep=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "94b8fa65",
    "metadata": {
     "tags": []
@@ -379,12 +458,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "626c5b8e",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nasa: 1\n",
+      "local government: 0\n",
+      "engineering: 0\n",
+      "employee satisfaction: 1\n",
+      "federal government: 1\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Determine whether each item in the following list of \\\n",
@@ -404,12 +495,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "902a7c74",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALERT: New NASA story!\n"
+     ]
+    }
+   ],
    "source": [
     "topic_dict = {i.split(': ')[0]: int(i.split(': ')[1]) for i in response.split(sep='\\n')}\n",
     "if topic_dict['nasa'] == 1:\n",
@@ -449,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
