--- a/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l7-expanding.ipynb
+++ b/04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/l7-expanding.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4c943900-98db-40b3-b639-7822ee2c5fd8",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c30c4239",
    "metadata": {},
    "outputs": [],
@@ -100,10 +100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d5403f73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear valued customer,\n",
+      "\n",
+      "Thank you for taking the time to share your detailed feedback with us. We are truly sorry to hear about the issues you experienced with the pricing changes and the quality of the product. We apologize for any inconvenience this may have caused you.\n",
+      "\n",
+      "If you have any further concerns or would like to discuss this matter further, please feel free to reach out to our customer service team for assistance. We are here to help address any issues you may have encountered.\n",
+      "\n",
+      "Thank you again for your feedback and for being a loyal customer. We appreciate your support and will strive to improve our products and services based on your valuable input.\n",
+      "\n",
+      "AI customer agent\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "You are a customer service AI assistant.\n",
@@ -134,10 +150,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1d5ea7c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear valued customer,\n",
+      "\n",
+      "Thank you for sharing your detailed feedback regarding your recent purchase of the 17 piece system. We are truly sorry to hear about the issues you experienced with the pricing fluctuations and the decrease in quality of the product over time. We apologize for any inconvenience this may have caused you.\n",
+      "\n",
+      "If you have any further concerns or would like to discuss this matter further, please do not hesitate to reach out to our customer service team for assistance. We are here to help address any issues you may encounter.\n",
+      "\n",
+      "Thank you again for taking the time to provide us with your feedback. Your input is valuable to us as we strive to improve our products and services.\n",
+      "\n",
+      "AI customer agent\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "You are a customer service AI assistant.\n",
